// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TraitsExtractionPrompt golden > defaults to the generic variant 1`] = `
{
  "system": ""준"의 행동/특성/성격만 추출하라.
다른 캐릭터 이름 또는 특성이 포함된 문장은 제외하라.
"준"이 주체인 행동만 허용한다.
출력은 불릿 목록, 최대 5개, 각 항목 한 줄.
구체적이고 관찰 가능한 표현만 사용하라.",
  "user": "[스크립트]
엘리아: 괜찮아요.
엘리아가 붕대를 감았다.",
}
`;

exports[`TraitsExtractionPrompt golden > drops an empty script for the generic variant 1`] = `
{
  "system": ""엘리아"의 행동/특성/성격만 추출하라.
다른 캐릭터 이름 또는 특성이 포함된 문장은 제외하라.
"엘리아"이 주체인 행동만 허용한다.
출력은 불릿 목록, 최대 5개, 각 항목 한 줄.
구체적이고 관찰 가능한 표현만 사용하라.",
  "user": ""엘리아" 별칭: "엘"
[스크립트]",
}
`;

exports[`TraitsExtractionPrompt golden > drops an empty script for the generic variant 2`] = `
{
  "system": ""엘리아"의 행동/특성/성격만 추출하라.
다른 캐릭터 이름 또는 특성이 포함된 문장은 제외하라.
"엘리아"이 주체인 행동만 허용한다.
출력은 불릿 목록, 최대 5개, 각 항목 한 줄.
구체적이고 관찰 가능한 표현만 사용하라.",
  "user": "[스크립트]",
}
`;

exports[`TraitsExtractionPrompt golden > drops an empty script for the xs variant 1`] = `
{
  "system": ""엘리아" 특성만 불릿 최대 5개. 타 캐릭터 내용 금지.",
  "user": ""엘리아" 별칭: "엘"",
}
`;

exports[`TraitsExtractionPrompt golden > drops an empty script for the xs variant 2`] = `
{
  "system": ""엘리아" 특성만 불릿 최대 5개. 타 캐릭터 내용 금지.",
  "user": "",
}
`;

exports[`TraitsExtractionPrompt golden > leaves the alias line out for the generic variant 1`] = `
{
  "system": ""엘리아"의 행동/특성/성격만 추출하라.
다른 캐릭터 이름 또는 특성이 포함된 문장은 제외하라.
"엘리아"이 주체인 행동만 허용한다.
출력은 불릿 목록, 최대 5개, 각 항목 한 줄.
구체적이고 관찰 가능한 표현만 사용하라.",
  "user": "[스크립트]
엘리아: 괜찮아요.
엘리아가 붕대를 감았다.",
}
`;

exports[`TraitsExtractionPrompt golden > leaves the alias line out for the generic variant 2`] = `
{
  "system": ""엘리아"의 행동/특성/성격만 추출하라.
다른 캐릭터 이름 또는 특성이 포함된 문장은 제외하라.
"엘리아"이 주체인 행동만 허용한다.
출력은 불릿 목록, 최대 5개, 각 항목 한 줄.
구체적이고 관찰 가능한 표현만 사용하라.",
  "user": "[스크립트]
엘리아: 괜찮아요.
엘리아가 붕대를 감았다.",
}
`;

exports[`TraitsExtractionPrompt golden > leaves the alias line out for the xs variant 1`] = `
{
  "system": ""엘리아" 특성만 불릿 최대 5개. 타 캐릭터 내용 금지.",
  "user": "엘리아: 괜찮아요.
엘리아가 붕대를 감았다.",
}
`;

exports[`TraitsExtractionPrompt golden > leaves the alias line out for the xs variant 2`] = `
{
  "system": ""엘리아" 특성만 불릿 최대 5개. 타 캐릭터 내용 금지.",
  "user": "엘리아: 괜찮아요.
엘리아가 붕대를 감았다.",
}
`;

exports[`TraitsExtractionPrompt golden > renders the aliases and the script for the generic variant 1`] = `
{
  "system": ""엘리아"의 행동/특성/성격만 추출하라.
다른 캐릭터 이름 또는 특성이 포함된 문장은 제외하라.
"엘리아"이 주체인 행동만 허용한다.
출력은 불릿 목록, 최대 5개, 각 항목 한 줄.
구체적이고 관찰 가능한 표현만 사용하라.",
  "user": ""엘리아" 별칭: "엘", "의사 선생"
[스크립트]
엘리아: 괜찮아요.
엘리아가 붕대를 감았다.",
}
`;

exports[`TraitsExtractionPrompt golden > renders the aliases and the script for the rich variant 1`] = `
{
  "system": ""엘리아"의 행동/특성/성격만 추출하라.
다른 캐릭터 이름 또는 특성이 포함된 문장은 제외하라.
"엘리아"이 주체인 행동만 허용한다.
출력은 불릿 목록, 최대 5개, 각 항목 한 줄.
구체적이고 관찰 가능한 표현만 사용하라.",
  "user": ""엘리아" 별칭: "엘", "의사 선생"
[스크립트]
엘리아: 괜찮아요.
엘리아가 붕대를 감았다.",
}
`;

exports[`TraitsExtractionPrompt golden > renders the aliases and the script for the xs variant 1`] = `
{
  "system": ""엘리아" 특성만 불릿 최대 5개. 타 캐릭터 내용 금지.",
  "user": ""엘리아" 별칭: "엘", "의사 선생"
엘리아: 괜찮아요.
엘리아가 붕대를 감았다.",
}
`;
